--- a/public/output.css
+++ b/public/output.css
@@ -553,24 +553,38 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute{
-  position: absolute;
+.container{
+  width: 100%;
 }
 
-.left-0{
-  left: 0px;
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
 }
 
-.top-\[-400px\]{
-  top: -400px;
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
 }
 
-.top-\[80px\]{
-  top: 80px;
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
 }
 
-.z-\[-1\]{
-  z-index: -1;
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
 }
 
 .mt-3\.5{
@@ -581,36 +595,72 @@ video {
   margin-top: 0.75rem;
 }
 
-.ml-28{
-  margin-left: 7rem;
+.ml-5{
+  margin-left: 1.25rem;
 }
 
 .mr-20{
   margin-right: 5rem;
 }
 
-.ml-5{
-  margin-left: 1.25rem;
-}
-
-.ml-20{
-  margin-left: 5rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
-}
-
 .mr-5{
   margin-right: 1.25rem;
 }
 
-.mr-10{
-  margin-right: 2.5rem;
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.-mr-1{
+  margin-right: -0.25rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
+}
+
+.ml-7{
+  margin-left: 1.75rem;
+}
+
+.ml-14{
+  margin-left: 3.5rem;
+}
+
+.ml-16{
+  margin-left: 4rem;
+}
+
+.ml-12{
+  margin-left: 3rem;
+}
+
+.ml-11{
+  margin-left: 2.75rem;
 }
 
 .flex{
   display: flex;
+}
+
+.inline-flex{
+  display: inline-flex;
 }
 
 .grid{
@@ -629,12 +679,20 @@ video {
   height: 4rem;
 }
 
+.h-4{
+  height: 1rem;
+}
+
 .w-16{
   width: 4rem;
 }
 
-.w-full{
-  width: 100%;
+.w-4{
+  width: 1rem;
+}
+
+.max-w-card{
+  max-width: 16rem;
 }
 
 .flex-1{
@@ -649,6 +707,10 @@ video {
   grid-template-columns: 1fr 4fr 1fr;;
 }
 
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
 .grid-rows-layout{
   grid-template-rows: 5rem 1fr;
 }
@@ -657,12 +719,12 @@ video {
   align-items: center;
 }
 
-.justify-start{
-  justify-content: flex-start;
-}
-
 .justify-end{
   justify-content: flex-end;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -681,21 +743,44 @@ video {
   gap: 1rem;
 }
 
-.gap-10{
-  gap: 2.5rem;
+.gap-2{
+  gap: 0.5rem;
 }
 
-.gap-32{
-  gap: 8rem;
+.gap-6{
+  gap: 1.5rem;
 }
 
-.gap-28{
-  gap: 7rem;
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-t-lg{
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-heroesbg{
+  background-image: url('../src/assets/bg.jpg');
 }
 
 .bg-background{
@@ -710,13 +795,30 @@ video {
   background-repeat: no-repeat;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.p-5{
+  padding: 1.25rem;
 }
 
-.pl-7{
-  padding-left: 1.75rem;
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-14{
+  padding: 3.5rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-poppins{
@@ -728,22 +830,34 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-semibold{
   font-weight: 600;
 }
 
+.font-bold{
+  font-weight: 700;
+}
+
+.font-medium{
+  font-weight: 500;
+}
+
 .uppercase{
   text-transform: uppercase;
+}
+
+.tracking-tight{
+  letter-spacing: -0.025em;
 }
 
 .text-slate-300{
@@ -756,30 +870,42 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.opacity-0{
-  opacity: 0;
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.opacity-100{
-  opacity: 1;
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.underline{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.decoration-orange-500{
+  -webkit-text-decoration-color: #f97316;
+          text-decoration-color: #f97316;
+}
+
+.decoration-2{
+  text-decoration-thickness: 2px;
+}
+
+.underline-offset-8{
+  text-underline-offset: 8px;
 }
 
 .bg-blend-darken{
   background-blend-mode: darken;
 }
 
-.transition-all{
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
-}
-
-.ease-in{
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .grid-areas-layout{
@@ -795,12 +921,9 @@ video {
   grid-area: main;
 }
 
-.hover\:fill-blue-500:hover{
-  fill: #3b82f6;
-}
-
-.hover\:fill-white:hover{
-  fill: #fff;
+.hover\:bg-blue-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover{
@@ -808,37 +931,60 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 640px){
-  .sm\:flex{
-    display: flex;
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-4:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-300:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
+}
+
+@media (prefers-color-scheme: dark){
+  .dark\:border-gray-700{
+    --tw-border-opacity: 1;
+    border-color: rgb(55 65 81 / var(--tw-border-opacity));
   }
 
-  .sm\:hidden{
-    display: none;
+  .dark\:bg-gray-800{
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-blue-600{
+    --tw-bg-opacity: 1;
+    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  }
+
+  .dark\:text-white{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-gray-400{
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-blue-700:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+  }
+
+  .dark\:focus\:ring-blue-800:focus{
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
   }
 }
 
 @media (min-width: 768px){
-  .md\:static{
-    position: static;
-  }
-
-  .md\:z-auto{
-    z-index: auto;
-  }
-
-  .md\:mr-11{
-    margin-right: 2.75rem;
-  }
-
-  .md\:ml-11{
-    margin-left: 2.75rem;
-  }
-
-  .md\:ml-5{
-    margin-left: 1.25rem;
-  }
-
   .md\:ml-20{
     margin-left: 5rem;
   }
@@ -849,31 +995,6 @@ video {
 
   .md\:hidden{
     display: none;
-  }
-
-  .md\:w-auto{
-    width: auto;
-  }
-
-  .md\:items-start{
-    align-items: flex-start;
-  }
-
-  .md\:items-center{
-    align-items: center;
-  }
-
-  .md\:py-0{
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
-  .md\:pl-0{
-    padding-left: 0px;
-  }
-
-  .md\:opacity-100{
-    opacity: 1;
   }
 }
 
