--- a/public/output.css
+++ b/public/output.css
@@ -573,8 +573,32 @@ video {
   margin-right: 1.25rem;
 }
 
+.mt-9{
+  margin-top: 2.25rem;
+}
+
+.ml-80{
+  margin-left: 20rem;
+}
+
+.mr-80{
+  margin-right: 20rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
 }
 
 .ml-16{
@@ -585,32 +609,12 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
 .ml-14{
   margin-left: 3.5rem;
 }
 
-.ml-2{
-  margin-left: 0.5rem;
-}
-
 .-mr-1{
   margin-right: -0.25rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.ml-1{
-  margin-left: 0.25rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
 }
 
 .flex{
@@ -629,12 +633,24 @@ video {
   display: none;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
 .h-16{
   height: 4rem;
+}
+
+.h-ch{
+  height: 35rem;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-8{
+  height: 2rem;
+}
+
+.h-screen{
+  height: 100vh;
 }
 
 .h-4{
@@ -647,6 +663,14 @@ video {
 
 .w-16{
   width: 4rem;
+}
+
+.w-image{
+  width: 30rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .w-4{
@@ -685,8 +709,16 @@ video {
   align-items: center;
 }
 
+.justify-start{
+  justify-content: flex-start;
+}
+
 .justify-end{
   justify-content: flex-end;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -701,12 +733,12 @@ video {
   gap: 5rem;
 }
 
-.gap-6{
-  gap: 1.5rem;
-}
-
 .gap-2{
   gap: 0.5rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .overflow-y-auto{
@@ -757,12 +789,12 @@ video {
   background-repeat: no-repeat;
 }
 
-.p-14{
-  padding: 3.5rem;
-}
-
 .p-5{
   padding: 1.25rem;
+}
+
+.p-14{
+  padding: 3.5rem;
 }
 
 .py-2{
@@ -963,17 +995,9 @@ video {
   .md\:hidden{
     display: none;
   }
-
-  .md\:bg-cover{
-    background-size: cover;
-  }
 }
 
 @media (min-width: 1024px){
-  .lg\:ml-16{
-    margin-left: 4rem;
-  }
-
   .lg\:ml-10{
     margin-left: 2.5rem;
   }
@@ -986,10 +1010,6 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .lg\:gap-6{
-    gap: 1.5rem;
-  }
-
   .lg\:gap-2{
     gap: 0.5rem;
   }
@@ -1000,48 +1020,20 @@ video {
 }
 
 @media (max-width: 600px){
-  .ns\:mb-5{
-    margin-bottom: 1.25rem;
-  }
-
-  .ns\:mr-10{
-    margin-right: 2.5rem;
-  }
-
   .ns\:mr-6{
     margin-right: 1.5rem;
-  }
-
-  .ns\:mt-10{
-    margin-top: 2.5rem;
-  }
-
-  .ns\:mt-5{
-    margin-top: 1.25rem;
   }
 
   .ns\:mt-2{
     margin-top: 0.5rem;
   }
 
-  .ns\:flex{
-    display: flex;
-  }
-
   .ns\:grid{
     display: grid;
   }
 
-  .ns\:h-screen{
-    height: 100vh;
-  }
-
   .ns\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .ns\:flex-col{
-    flex-direction: column;
   }
 
   .ns\:items-center{
@@ -1054,18 +1046,6 @@ video {
 
   .ns\:gap-3{
     gap: 0.75rem;
-  }
-
-  .ns\:gap-5{
-    gap: 1.25rem;
-  }
-
-  .ns\:bg-cover{
-    background-size: cover;
-  }
-
-  .ns\:p-14{
-    padding: 3.5rem;
   }
 
   .ns\:p-10{
