--- a/public/output.css
+++ b/public/output.css
@@ -609,6 +609,18 @@ video {
   margin-right: -0.25rem;
 }
 
+.mr-3{
+  margin-right: 0.75rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -649,6 +661,14 @@ video {
   height: 1rem;
 }
 
+.h-5{
+  height: 1.25rem;
+}
+
+.h-auto{
+  height: auto;
+}
+
 .min-h-picture{
   min-height: 10rem;
 }
@@ -671,6 +691,10 @@ video {
 
 .w-4{
   width: 1rem;
+}
+
+.w-5{
+  width: 1.25rem;
 }
 
 .max-w-card{
@@ -699,6 +723,18 @@ video {
 
 .grid-rows-layout{
   grid-template-rows: 5rem 1fr;
+}
+
+.flex-row{
+  flex-direction: row;
+}
+
+.flex-col{
+  flex-direction: column;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -759,6 +795,11 @@ video {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -801,6 +842,11 @@ video {
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .text-center{
@@ -866,6 +912,11 @@ video {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -921,9 +972,19 @@ video {
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -973,6 +1034,16 @@ video {
     background-color: rgb(29 78 216 / var(--tw-bg-opacity));
   }
 
+  .dark\:hover\:bg-gray-700:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:text-white:hover{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
   .dark\:focus\:ring-blue-800:focus{
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
@@ -989,6 +1060,23 @@ video {
   }
 
   .md\:hidden{
+    display: none;
+  }
+
+  .md\:h-screen{
+    height: 100vh;
+  }
+
+  .md\:overflow-y-auto{
+    overflow-y: auto;
+  }
+
+  .md\:scrollbar-hide{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .md\:scrollbar-hide::-webkit-scrollbar{
     display: none;
   }
 }
@@ -1024,72 +1112,8 @@ video {
     margin-top: 0.5rem;
   }
 
-  .ns\:mt-10{
-    margin-top: 2.5rem;
-  }
-
-  .ns\:mt-40{
-    margin-top: 10rem;
-  }
-
-  .ns\:mr-2{
-    margin-right: 0.5rem;
-  }
-
-  .ns\:ml-2{
-    margin-left: 0.5rem;
-  }
-
-  .ns\:mr-10{
-    margin-right: 2.5rem;
-  }
-
-  .ns\:ml-10{
-    margin-left: 2.5rem;
-  }
-
-  .ns\:mr-20{
-    margin-right: 5rem;
-  }
-
-  .ns\:ml-20{
-    margin-left: 5rem;
-  }
-
-  .ns\:mr-40{
-    margin-right: 10rem;
-  }
-
-  .ns\:ml-40{
-    margin-left: 10rem;
-  }
-
   .ns\:grid{
     display: grid;
-  }
-
-  .ns\:h-2{
-    height: 0.5rem;
-  }
-
-  .ns\:w-96{
-    width: 24rem;
-  }
-
-  .ns\:w-10{
-    width: 2.5rem;
-  }
-
-  .ns\:w-24{
-    width: 6rem;
-  }
-
-  .ns\:w-60{
-    width: 15rem;
-  }
-
-  .ns\:max-w-md{
-    max-width: 28rem;
   }
 
   .ns\:max-w-sm{
@@ -1126,6 +1150,10 @@ video {
     height: 15rem;
   }
 
+  .cardInfo\:h-screen{
+    height: 100vh;
+  }
+
   .cardInfo\:w-infocardmdscreen{
     width: 35rem;
   }
@@ -1138,9 +1166,26 @@ video {
     flex-direction: column;
   }
 
+  .cardInfo\:items-center{
+    align-items: center;
+  }
+
+  .cardInfo\:overflow-y-auto{
+    overflow-y: auto;
+  }
+
   .cardInfo\:rounded-t-lg{
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
+  }
+
+  .cardInfo\:scrollbar-hide{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .cardInfo\:scrollbar-hide::-webkit-scrollbar{
+    display: none;
   }
 }
 
