--- a/public/output.css
+++ b/public/output.css
@@ -573,12 +573,24 @@ video {
   margin-right: 1.25rem;
 }
 
-.mt-9{
-  margin-top: 2.25rem;
+.mt-14{
+  margin-top: 3.5rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
 }
 
 .mb-5{
   margin-bottom: 1.25rem;
+}
+
+.mt-9{
+  margin-top: 2.25rem;
 }
 
 .mb-3{
@@ -589,24 +601,8 @@ video {
   margin-left: 0.5rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.ml-16{
-  margin-left: 4rem;
-}
-
 .mb-2{
   margin-bottom: 0.5rem;
-}
-
-.ml-14{
-  margin-left: 3.5rem;
-}
-
-.-mr-1{
-  margin-right: -0.25rem;
 }
 
 .mr-3{
@@ -617,8 +613,20 @@ video {
   margin-right: 0.5rem;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.ml-16{
+  margin-left: 4rem;
+}
+
+.ml-14{
+  margin-left: 3.5rem;
+}
+
+.-mr-1{
+  margin-right: -0.25rem;
 }
 
 .flex{
@@ -637,8 +645,16 @@ video {
   display: none;
 }
 
+.h-screen{
+  height: 100vh;
+}
+
 .h-16{
   height: 4rem;
+}
+
+.h-52{
+  height: 13rem;
 }
 
 .h-ch{
@@ -653,20 +669,12 @@ video {
   height: 2rem;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
-.h-4{
-  height: 1rem;
-}
-
 .h-5{
   height: 1.25rem;
 }
 
-.h-auto{
-  height: auto;
+.h-4{
+  height: 1rem;
 }
 
 .min-h-picture{
@@ -675,6 +683,10 @@ video {
 
 .w-16{
   width: 4rem;
+}
+
+.w-52{
+  width: 13rem;
 }
 
 .w-infocard{
@@ -689,12 +701,16 @@ video {
   width: 100%;
 }
 
+.w-5{
+  width: 1.25rem;
+}
+
 .w-4{
   width: 1rem;
 }
 
-.w-5{
-  width: 1.25rem;
+.max-w-xl{
+  max-width: 36rem;
 }
 
 .max-w-card{
@@ -725,16 +741,8 @@ video {
   grid-template-rows: 5rem 1fr;
 }
 
-.flex-row{
-  flex-direction: row;
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.items-end{
-  align-items: flex-end;
 }
 
 .items-center{
@@ -765,6 +773,10 @@ video {
   gap: 5rem;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
@@ -775,6 +787,10 @@ video {
 
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-lg{
@@ -839,14 +855,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .text-center{
@@ -867,6 +883,11 @@ video {
   line-height: 2rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -880,12 +901,24 @@ video {
   font-weight: 700;
 }
 
+.font-normal{
+  font-weight: 400;
+}
+
 .font-medium{
   font-weight: 500;
 }
 
 .uppercase{
   text-transform: uppercase;
+}
+
+.leading-loose{
+  line-height: 2;
+}
+
+.tracking-widest{
+  letter-spacing: 0.1em;
 }
 
 .tracking-tight{
@@ -967,14 +1000,14 @@ video {
   display: none;
 }
 
-.hover\:bg-blue-800:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover{
@@ -1029,14 +1062,14 @@ video {
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 
-  .dark\:hover\:bg-blue-700:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-  }
-
   .dark\:hover\:bg-gray-700:hover{
     --tw-bg-opacity: 1;
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-blue-700:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(29 78 216 / var(--tw-bg-opacity));
   }
 
   .dark\:hover\:text-white:hover{
@@ -1060,23 +1093,6 @@ video {
   }
 
   .md\:hidden{
-    display: none;
-  }
-
-  .md\:h-screen{
-    height: 100vh;
-  }
-
-  .md\:overflow-y-auto{
-    overflow-y: auto;
-  }
-
-  .md\:scrollbar-hide{
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-
-  .md\:scrollbar-hide::-webkit-scrollbar{
     display: none;
   }
 }
@@ -1104,6 +1120,11 @@ video {
 }
 
 @media (max-width: 600px){
+  .ns\:mx-4{
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
   .ns\:mr-6{
     margin-right: 1.5rem;
   }
@@ -1142,16 +1163,16 @@ video {
 }
 
 @media (max-width: 850px){
+  .cardInfo\:h-screen{
+    height: 100vh;
+  }
+
   .cardInfo\:h-hc{
     height: 47.5rem;
   }
 
   .cardInfo\:h-60{
     height: 15rem;
-  }
-
-  .cardInfo\:h-screen{
-    height: 100vh;
   }
 
   .cardInfo\:w-infocardmdscreen{
@@ -1166,26 +1187,20 @@ video {
     flex-direction: column;
   }
 
-  .cardInfo\:items-center{
-    align-items: center;
-  }
-
-  .cardInfo\:overflow-y-auto{
-    overflow-y: auto;
-  }
-
   .cardInfo\:rounded-t-lg{
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
   }
+}
 
-  .cardInfo\:scrollbar-hide{
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+@media (max-width: 360px){
+  .ssm\:h-screen{
+    height: 100vh;
   }
 
-  .cardInfo\:scrollbar-hide::-webkit-scrollbar{
-    display: none;
+  .ssm\:bg-black{
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 }
 
