--- a/public/output.css
+++ b/public/output.css
@@ -1125,22 +1125,6 @@ input:checked + .toggle-bg{
   bottom: 0px;
 }
 
-.top-2\.5{
-  top: 0.625rem;
-}
-
-.right-2\.5{
-  right: 0.625rem;
-}
-
-.top-2{
-  top: 0.5rem;
-}
-
-.right-2{
-  right: 0.5rem;
-}
-
 .z-50{
   z-index: 50;
 }
@@ -1161,43 +1145,29 @@ input:checked + .toggle-bg{
   z-index: 30;
 }
 
+.m-0{
+  margin: 0px;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.my-7{
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
+.mr-3{
+  margin-right: 0.75rem;
 }
 
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.ml-3{
+  margin-left: 0.75rem;
 }
 
-.mt-3\.5{
-  margin-top: 0.875rem;
+.mt-4{
+  margin-top: 1rem;
 }
 
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.ml-5{
-  margin-left: 1.25rem;
-}
-
-.mr-20{
-  margin-right: 5rem;
-}
-
-.mr-5{
-  margin-right: 1.25rem;
-}
-
-.mt-14{
-  margin-top: 3.5rem;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .mt-10{
@@ -1212,12 +1182,12 @@ input:checked + .toggle-bg{
   margin-bottom: 1.25rem;
 }
 
-.mt-9{
-  margin-top: 2.25rem;
-}
-
 .mb-3{
   margin-bottom: 0.75rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
 }
 
 .ml-2{
@@ -1228,24 +1198,12 @@ input:checked + .toggle-bg{
   margin-bottom: 0.5rem;
 }
 
-.mr-3{
-  margin-right: 0.75rem;
-}
-
 .mr-2{
   margin-right: 0.5rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
-}
-
 .ml-16{
   margin-left: 4rem;
-}
-
-.ml-14{
-  margin-left: 3.5rem;
 }
 
 .-mr-1{
@@ -1258,34 +1216,6 @@ input:checked + .toggle-bg{
 
 .mb-1{
   margin-bottom: 0.25rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mb-2\.5{
-  margin-bottom: 0.625rem;
-}
-
-.mb-7{
-  margin-bottom: 1.75rem;
-}
-
-.mt-7{
-  margin-top: 1.75rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
 }
 
 .block{
@@ -1320,12 +1250,12 @@ input:checked + .toggle-bg{
   display: none;
 }
 
-.h-screen{
-  height: 100vh;
+.h-6{
+  height: 1.5rem;
 }
 
-.h-16{
-  height: 4rem;
+.h-7{
+  height: 1.75rem;
 }
 
 .h-52{
@@ -1348,48 +1278,36 @@ input:checked + .toggle-bg{
   height: 1.25rem;
 }
 
+.h-screen{
+  height: 100vh;
+}
+
+.h-card{
+  height: 350px;
+}
+
 .h-4{
   height: 1rem;
 }
 
-.h-6{
-  height: 1.5rem;
+.h-auto{
+  height: auto;
 }
 
 .h-9{
   height: 2.25rem;
 }
 
-.h-2\.5{
-  height: 0.625rem;
-}
-
-.h-2{
-  height: 0.5rem;
-}
-
-.h-48{
-  height: 12rem;
-}
-
-.h-12{
-  height: 3rem;
-}
-
-.h-10{
-  height: 2.5rem;
-}
-
-.h-7{
-  height: 1.75rem;
-}
-
 .min-h-picture{
   min-height: 10rem;
 }
 
-.w-16{
-  width: 4rem;
+.w-7{
+  width: 1.75rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .w-52{
@@ -1402,10 +1320,6 @@ input:checked + .toggle-bg{
 
 .w-image{
   width: 30rem;
-}
-
-.w-full{
-  width: 100%;
 }
 
 .w-5{
@@ -1424,60 +1338,12 @@ input:checked + .toggle-bg{
   width: 50%;
 }
 
-.w-80{
-  width: 20rem;
-}
-
-.w-48{
-  width: 12rem;
-}
-
-.w-12{
-  width: 3rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-8{
-  width: 2rem;
-}
-
-.w-7{
-  width: 1.75rem;
-}
-
 .max-w-xl{
   max-width: 36rem;
 }
 
 .max-w-card{
   max-width: 16rem;
-}
-
-.max-w-lg{
-  max-width: 32rem;
-}
-
-.max-w-\[460px\]{
-  max-width: 460px;
-}
-
-.max-w-\[500px\]{
-  max-width: 500px;
-}
-
-.max-w-\[450px\]{
-  max-width: 450px;
-}
-
-.max-w-\[380px\]{
-  max-width: 380px;
 }
 
 .flex-1{
@@ -1526,27 +1392,6 @@ input:checked + .toggle-bg{
   transform: none;
 }
 
-@-webkit-keyframes pulse{
-  50%{
-    opacity: .5;
-  }
-}
-
-@keyframes pulse{
-  50%{
-    opacity: .5;
-  }
-}
-
-.animate-pulse{
-  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-.cursor-pointer{
-  cursor: pointer;
-}
-
 .cursor-default{
   cursor: default;
 }
@@ -1555,12 +1400,12 @@ input:checked + .toggle-bg{
   cursor: not-allowed;
 }
 
-.resize{
-  resize: both;
+.cursor-pointer{
+  cursor: pointer;
 }
 
-.grid-cols-layout{
-  grid-template-columns: 1fr 4fr 1fr;;
+.resize{
+  resize: both;
 }
 
 .grid-cols-2{
@@ -1573,10 +1418,6 @@ input:checked + .toggle-bg{
 
 .grid-cols-7{
   grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
-.grid-rows-layout{
-  grid-template-rows: 5rem 1fr;
 }
 
 .flex-col{
@@ -1615,12 +1456,12 @@ input:checked + .toggle-bg{
   justify-content: space-between;
 }
 
-.gap-3{
-  gap: 0.75rem;
+.gap-1{
+  gap: 0.25rem;
 }
 
-.gap-20{
-  gap: 5rem;
+.gap-3{
+  gap: 0.75rem;
 }
 
 .gap-10{
@@ -1629,22 +1470,6 @@ input:checked + .toggle-bg{
 
 .gap-2{
   gap: 0.5rem;
-}
-
-.gap-6{
-  gap: 1.5rem;
-}
-
-.gap-4{
-  gap: 1rem;
-}
-
-.gap-16{
-  gap: 4rem;
-}
-
-.gap-1{
-  gap: 0.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
@@ -1665,20 +1490,16 @@ input:checked + .toggle-bg{
   overflow-y: auto;
 }
 
-.whitespace-nowrap{
-  white-space: nowrap;
-}
-
-.rounded-full{
-  border-radius: 9999px;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-lg{
   border-radius: 0.5rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-t-lg{
@@ -1704,9 +1525,9 @@ input:checked + .toggle-bg{
   border-width: 0px;
 }
 
-.border-gray-200{
+.border-gray-700{
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
 .border-gray-300{
@@ -1729,14 +1550,9 @@ input:checked + .toggle-bg{
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
-.border-gray-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
-}
-
-.bg-white{
+.bg-gray-800{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-blue-700{
@@ -1747,6 +1563,11 @@ input:checked + .toggle-bg{
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1761,25 +1582,6 @@ input:checked + .toggle-bg{
 .bg-gray-900{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.bg-transparent{
-  background-color: transparent;
-}
-
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -1802,6 +1604,18 @@ input:checked + .toggle-bg{
   background-repeat: no-repeat;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-0{
+  padding: 0px;
+}
+
 .p-5{
   padding: 1.25rem;
 }
@@ -1810,24 +1624,22 @@ input:checked + .toggle-bg{
   padding: 3.5rem;
 }
 
-.p-4{
-  padding: 1rem;
-}
-
 .p-2\.5{
   padding: 0.625rem;
-}
-
-.p-2{
-  padding: 0.5rem;
 }
 
 .p-1{
   padding: 0.25rem;
 }
 
-.p-1\.5{
-  padding: 0.375rem;
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-2\.5{
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 
 .py-2{
@@ -1845,28 +1657,14 @@ input:checked + .toggle-bg{
   padding-right: 0.75rem;
 }
 
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.py-2\.5{
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.pt-2{
-  padding-top: 0.5rem;
 }
 
 .pr-4{
@@ -1877,6 +1675,10 @@ input:checked + .toggle-bg{
   padding-left: 0.75rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1885,14 +1687,14 @@ input:checked + .toggle-bg{
   font-family: Poppins, sans-serif;;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl{
@@ -1900,19 +1702,9 @@ input:checked + .toggle-bg{
   line-height: 2.25rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-semibold{
@@ -1955,14 +1747,19 @@ input:checked + .toggle-bg{
   letter-spacing: -0.025em;
 }
 
-.text-slate-300{
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-slate-300{
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
 .text-gray-900{
@@ -1975,42 +1772,14 @@ input:checked + .toggle-bg{
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(28 100 242 / var(--tw-text-opacity));
-}
-
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-gray-200{
+.text-blue-600{
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.underline{
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-
-.decoration-orange-500{
-  -webkit-text-decoration-color: #FF5A1F;
-          text-decoration-color: #FF5A1F;
-}
-
-.decoration-2{
-  text-decoration-thickness: 2px;
-}
-
-.underline-offset-8{
-  text-underline-offset: 8px;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -2086,19 +1855,6 @@ input:checked + .toggle-bg{
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
-.grid-areas-layout{
-  grid-template-areas: "header header header"
-"main main main";
-}
-
-.grid-in-header{
-  grid-area: header;
-}
-
-.grid-in-main{
-  grid-area: main;
-}
-
 .scrollbar-hide{
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -2113,9 +1869,9 @@ input:checked + .toggle-bg{
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.hover\:bg-gray-100:hover{
+.hover\:bg-gray-700:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-800:hover{
@@ -2123,29 +1879,19 @@ input:checked + .toggle-bg{
   background-color: rgb(30 66 159 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-white:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-200:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-900:hover{
@@ -2163,34 +1909,20 @@ input:checked + .toggle-bg{
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.hover\:text-blue-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(26 86 219 / var(--tw-text-opacity));
-}
-
-.hover\:no-underline:hover{
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-
-.focus\:z-10:focus{
-  z-index: 10;
-}
-
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-.focus\:ring-4:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-2:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-4:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -2202,11 +1934,6 @@ input:checked + .toggle-bg{
 .focus\:ring-gray-200:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
-}
-
-.dark .dark\:border-gray-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
 .dark .dark\:border-gray-600{
@@ -2223,9 +1950,14 @@ input:checked + .toggle-bg{
   border-color: transparent;
 }
 
-.dark .dark\:bg-gray-800{
+.dark .dark\:border-gray-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.dark .dark\:bg-gray-900{
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-blue-600{
@@ -2243,27 +1975,27 @@ input:checked + .toggle-bg{
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-800\/50{
-  background-color: rgb(31 41 55 / 0.5);
+.dark .dark\:bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+.dark .dark\:bg-gray-800\/50{
+  background-color: rgb(31 41 55 / 0.5);
 }
 
 .dark .dark\:bg-opacity-80{
   --tw-bg-opacity: 0.8;
 }
 
-.dark .dark\:text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-blue-500{
@@ -2306,42 +2038,24 @@ input:checked + .toggle-bg{
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.dark .dark\:focus\:ring-blue-800:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
-}
-
-.dark .dark\:focus\:ring-gray-700:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(55 65 81 / var(--tw-ring-opacity));
-}
-
 .dark .dark\:focus\:ring-gray-600:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
 }
 
-@media (min-width: 640px){
-  .sm\:h-9{
-    height: 2.25rem;
-  }
+.dark .dark\:focus\:ring-blue-800:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
+}
 
+@media (min-width: 640px){
   .sm\:h-16{
     height: 4rem;
-  }
-
-  .sm\:gap-16{
-    gap: 4rem;
   }
 
   .sm\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
-  }
-
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .sm\:text-lg{
@@ -2351,20 +2065,12 @@ input:checked + .toggle-bg{
 }
 
 @media (min-width: 768px){
-  .md\:ml-20{
-    margin-left: 5rem;
-  }
-
   .md\:mt-0{
     margin-top: 0px;
   }
 
   .md\:block{
     display: block;
-  }
-
-  .md\:flex{
-    display: flex;
   }
 
   .md\:hidden{
@@ -2393,23 +2099,8 @@ input:checked + .toggle-bg{
     border-width: 0px;
   }
 
-  .md\:bg-white{
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
   .md\:bg-transparent{
     background-color: transparent;
-  }
-
-  .md\:bg-gray-50{
-    --tw-bg-opacity: 1;
-    background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-gray-900{
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 
   .md\:p-0{
@@ -2421,28 +2112,8 @@ input:checked + .toggle-bg{
     line-height: 1.25rem;
   }
 
-  .md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .md\:font-medium{
     font-weight: 500;
-  }
-
-  .md\:text-blue-700{
-    --tw-text-opacity: 1;
-    color: rgb(26 86 219 / var(--tw-text-opacity));
-  }
-
-  .md\:text-white{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .md\:underline{
@@ -2467,26 +2138,7 @@ input:checked + .toggle-bg{
     background-color: transparent;
   }
 
-  .md\:hover\:text-blue-700:hover{
-    --tw-text-opacity: 1;
-    color: rgb(26 86 219 / var(--tw-text-opacity));
-  }
-
   .md\:hover\:text-white:hover{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark .md\:dark\:bg-gray-900{
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-
-  .dark .md\:dark\:hover\:bg-transparent:hover{
-    background-color: transparent;
-  }
-
-  .dark .md\:dark\:hover\:text-white:hover{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
@@ -2514,18 +2166,14 @@ input:checked + .toggle-bg{
   }
 }
 
-@media (max-width: 600px){
+@media (max-width: 640px){
   .ns\:mx-4{
     margin-left: 1rem;
     margin-right: 1rem;
   }
 
-  .ns\:mr-6{
-    margin-right: 1.5rem;
-  }
-
-  .ns\:mt-2{
-    margin-top: 0.5rem;
+  .ns\:mr-8{
+    margin-right: 2rem;
   }
 
   .ns\:grid{
@@ -2538,14 +2186,6 @@ input:checked + .toggle-bg{
 
   .ns\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .ns\:items-center{
-    align-items: center;
-  }
-
-  .ns\:justify-center{
-    justify-content: center;
   }
 
   .ns\:gap-3{
